fixed extra white space issue && added comments

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body, html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: 100%;
+  width: 100%;
   padding: 0;
   margin: 0;
   min-width: 320px;
@@ -13,13 +14,14 @@ body h1, html h1 {
 
 body {
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
 }
 
 button, a {
   cursor: pointer;
 }
 
-button:hover, a:hover {
+button:hover {
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
 }
@@ -122,6 +124,12 @@ button:hover, a:hover {
   background-color: #694ad9;
 }
 
+#nav-bar ul#nav-menu li {
+  display: inline-block;
+  padding: 0 15px;
+  margin-bottom: 16px;
+}
+
 @media screen and (min-width: 768px) {
   #nav-bar ul#nav-menu {
     display: -webkit-box;
@@ -144,12 +152,6 @@ button:hover, a:hover {
   #nav-bar ul#nav-menu li:nth-child(4) {
     margin-left: 30px;
   }
-}
-
-#nav-bar ul#nav-menu li {
-  display: inline-block;
-  padding: 0 15px;
-  margin-bottom: 16px;
 }
 
 #nav-bar a {
@@ -181,7 +183,7 @@ button:hover, a:hover {
 main {
   width: 90%;
   margin: 0 auto;
-  padding-top: 150px;
+  padding-top: 130px;
   text-align: center;
 }
 
@@ -247,10 +249,6 @@ main input#search-bar {
   }
 }
 
-main input#search-bar:focus {
-  outline: none;
-}
-
 main button#search-btn {
   font-size: 14px;
   background-color: #89d99d;
@@ -275,7 +273,7 @@ main button#search-btn {
 }
 
 div#learn-more {
-  margin: 120px auto 120px auto;
+  margin: 140px auto 100px auto;
   position: absulute;
 }
 
@@ -286,7 +284,7 @@ div#learn-more {
 }
 
 div#learn-more span {
-  font-size: 0.9em;
+  font-size: 12px;
   color: #ffffff;
   text-transform: uppercase;
 }
@@ -346,9 +344,15 @@ div#create-account {
 }
 
 div#create-account p {
-  font-size: 1.2em;
+  font-size: 14px;
   color: #777;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1024px) {
+  div#create-account p {
+    font-size: 22px;
+  }
 }
 
 div#create-account button {
@@ -537,7 +541,7 @@ footer {
 @media screen and (min-width: 768px) {
   footer {
     font-size: 0.8em;
-    padding: 60px 0;
+    padding: 60px 50px;
   }
 }
 
